Changing colors, removing useless things

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 							</a>
 						</div>
 						<div>
-							<p class="text-center"><strong>Template</strong></p>
+							<p class="text-center text-secondary"><strong>Template</strong></p>
 						</div>
 					</div>
 					<div class="spacer"></div>
@@ -39,7 +39,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 
 -->
 	<nav>
-		<div class="nav nav-pills nav-justified" id="nav-tab" role="tablist">
+		<div class="nav nav-pills nav-justified pillColor" id="nav-tab" role="tablist">
 			<a class="nav-item nav-link active" id="nav-main-tab" data-toggle="pill" href="#nav-main" role="tab" aria-controls="nav-main" aria-selected="true">Principaux Liens</a>
 			<a class="nav-item nav-link" id="nav-second-tab" data-toggle="pill" href="#nav-second" role="tab" aria-controls="nav-second" aria-selected="false">Liens Secondaires</a>
 			<a class="nav-item nav-link" id="nav-faq-tab" data-toggle="pill" href="#nav-faq" role="tab" aria-controls="nav-faq" aria-selected="false">F.A.Q.</a>
@@ -60,7 +60,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Webmail</strong></p>
+								<p class="text-center text-secondary"><strong>Webmail</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -74,7 +74,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Sharepoint</strong></p>
+								<p class="text-center text-secondary"><strong>Sharepoint</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -88,7 +88,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>DropZone</strong></p>
+								<p class="text-center text-secondary"><strong>DropZone</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -102,7 +102,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Password Manager</strong></p>
+								<p class="text-center text-secondary"><strong>Password Manager</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -116,7 +116,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Portal</strong></p>
+								<p class="text-center text-secondary"><strong>Portal</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -130,7 +130,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Personal Email Manager</strong></p>
+								<p class="text-center text-secondary"><strong>Personal Email Manager</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -144,7 +144,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Zadig</strong></p>
+								<p class="text-center text-secondary"><strong>Zadig</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -158,7 +158,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Intranet</strong></p>
+								<p class="text-center text-secondary"><strong>Intranet</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -172,7 +172,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Site Qualité</strong></p>
+								<p class="text-center text-secondary"><strong>Site Qualité</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -186,7 +186,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Digiposte</strong></p>
+								<p class="text-center text-secondary"><strong>Digiposte</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -200,7 +200,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>COVID-19</strong></p>
+								<p class="text-center text-secondary"><strong>COVID-19</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -214,7 +214,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>HRevolution</strong></p>
+								<p class="text-center text-secondary"><strong>HRevolution</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -236,7 +236,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Jira</strong></p>
+								<p class="text-center text-secondary"><strong>Jira</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -250,7 +250,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Tuleap</strong></p>
+								<p class="text-center text-secondary"><strong>Tuleap</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -264,7 +264,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Demonstrator</strong></p>
+								<p class="text-center text-secondary"><strong>Demonstrator</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
@@ -278,7 +278,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								</a>
 							</div>
 							<div>
-								<p class="text-center"><strong>Salesforce</strong></p>
+								<p class="text-center text-secondary"><strong>Salesforce</strong></p>
 							</div>
 						</div>
 						<div class="spacer"></div>
