--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="./style/style.css">
 	</head>
 	<body>
+		<div class="spacer-10"></div>
 <!--Main navbar with logo-->
 	<nav class="navbar navbar-expand-lg bg-white">
 		<div class="container-fluid">
@@ -20,10 +21,11 @@
 			</div>
 		</div>
 	</nav>
+	<div class="spacer-10"></div>
 <!--tabs to navigate between main and secondary links
 To add one, copy this template and add it next to the comment quoted "NewTabPlacement" (ctrl+F to find it)
 
-<div class="col-md-3 col-sm-6">
+<div class="col-lg-2 col-md-3 col-sm-6">
 					<div class="cardBlockShadow border rounded bg-white">
 						<div class="text-center">
 							<a class="navBlock justify-content-center" title="" href="" target="_blank">
@@ -34,12 +36,12 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 							<p class="text-center text-secondary"><strong>Template</strong></p>
 						</div>
 					</div>
-					<div class="spacer"></div>
+					<div class="spacer-20"></div>
 				</div>
 
 -->
 	<nav>
-		<div class="nav nav-pills nav-justified pillColor" id="nav-tab" role="tablist">
+		<div class="nav nav-pills nav-fill pillColor" id="nav-tab" role="tablist">
 			<a class="nav-item nav-link active" id="nav-main-tab" data-toggle="pill" href="#nav-main" role="tab" aria-controls="nav-main" aria-selected="true">Principaux Liens</a>
 			<a class="nav-item nav-link" id="nav-second-tab" data-toggle="pill" href="#nav-second" role="tab" aria-controls="nav-second" aria-selected="false">Liens Secondaires</a>
 			<a class="nav-item nav-link" id="nav-faq-tab" data-toggle="pill" href="#nav-faq" role="tab" aria-controls="nav-faq" aria-selected="false">F.A.Q.</a>
@@ -48,11 +50,11 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 	<div class="tab-content" id="nav-tabContent">
 <!--Main tab-->
 		<div class="tab-pane fade show active" id="nav-main" role="tabpanel" aria-labelledby="nav-main-tab">
-			<div class="spacer"></div>
+			<div class="spacer-20"></div>
 			<div class="container">
-				<div class="row">
+				<div class="row justify-content-center">
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://mail.telespazio.com/owa" target="_blank">
@@ -63,10 +65,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Webmail</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://teamsites.telespazio.com" target="_blank">
@@ -77,10 +79,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Sharepoint</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://dropzone.ssl.telespazio.com" target="_blank">
@@ -91,10 +93,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>DropZone</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://tpm.ssl.telespazio.com" target="_blank">
@@ -105,10 +107,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Password Manager</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://ssl.telespazio.com" target="_blank">
@@ -119,10 +121,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Portal</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://mailrelay1.ssl.telespazio.com/pem/login/pages/login.jsf" target="_blank">
@@ -133,10 +135,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Personal Email Manager</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://hr-services.fr.adp.com/" target="_blank">
@@ -147,10 +149,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Zadig</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://intranet.telespazio.com/EN/Pages/default.aspx" target="_blank">
@@ -161,10 +163,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Intranet</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://teamsites.telespazio.com/sites/francequality/" target="_blank">
@@ -175,10 +177,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Site Qualité</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://secure.digiposte.fr/identification-plus" target="_blank">
@@ -189,10 +191,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Digiposte</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://startpage.telespazio.fr/COM/covidpage.html" target="_blank">
@@ -203,10 +205,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>COVID-19</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://performancemanager5.successfactors.eu/login?company=finmeccaniP" target="_blank">
@@ -217,18 +219,18 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>HRevolution</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 				</div>
 			</div>
 		</div>
 <!--Second tab-->
 		<div class="tab-pane fade" id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab">
-			<div class="spacer"></div>
+			<div class="spacer-20"></div>
 			<div class="container">
-				<div class="row">
+				<div class="row justify-content-center">
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://jira.ssl.telespazio.com/secure/Dashboard.jspa" target="_blank">
@@ -239,10 +241,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Jira</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://tuleap.telespazio.fr" target="_blank">
@@ -253,10 +255,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Tuleap</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="http://demonstrator.telespazio.com/" target="_blank">
@@ -267,10 +269,10 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Demonstrator</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-md-3 col-sm-6">
+					<div class="col-lg-2 col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://login.salesforce.com/" target="_blank">
@@ -281,7 +283,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 								<p class="text-center text-secondary"><strong>Salesforce</strong></p>
 							</div>
 						</div>
-						<div class="spacer"></div>
+						<div class="spacer-20"></div>
 					</div>
 				</div>
 			</div>
@@ -291,7 +293,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 	<!--NewTabPlacement-->
 <!--faq tab-->
 		<div class="tab-pane fade" id="nav-faq" role="tabpanel" aria-labelledby="nav-faq-tab">
-			<div class="spacer"></div>
+			<div class="spacer-20"></div>
 			<div class="container">
 				<p id="qtext">
 					<B>Bienvenue sur StartPage</B><br>
