--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<body>
 		<div class="spacer-10"></div>
 <!--Main navbar with logo-->
-	<nav class="navbar navbar-expand-lg bg-white">
+	<nav class="navbar navbar-expand-xl bg-white">
 		<div class="container-fluid">
 			<div class="row">
-				<img  class="col-12" id="logo" title="TPZFlower"  alt=""  src="./src/Telespazio.jpg">
+				<img  class="col-12" id="logo" title="TPZFlower"  alt=""  src="./src/Telespazio.png">
 			</div>
 		</div>
 	</nav>
@@ -25,7 +25,7 @@
 <!--tabs to navigate between main and secondary links
 To add one, copy this template and add it next to the comment quoted "NewTabPlacement" (ctrl+F to find it)
 
-<div class="col-lg-2 col-md-3 col-sm-6">
+<div class="col-md-3 col-sm-6">
 					<div class="cardBlockShadow border rounded bg-white">
 						<div class="text-center">
 							<a class="navBlock justify-content-center" title="" href="" target="_blank">
@@ -54,7 +54,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 			<div class="container">
 				<div class="row justify-content-center">
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://mail.telespazio.com/owa" target="_blank">
@@ -68,7 +68,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://teamsites.telespazio.com" target="_blank">
@@ -82,7 +82,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://dropzone.ssl.telespazio.com" target="_blank">
@@ -96,7 +96,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://tpm.ssl.telespazio.com" target="_blank">
@@ -110,7 +110,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://ssl.telespazio.com" target="_blank">
@@ -124,7 +124,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://mailrelay1.ssl.telespazio.com/pem/login/pages/login.jsf" target="_blank">
@@ -138,7 +138,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://hr-services.fr.adp.com/" target="_blank">
@@ -152,7 +152,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://intranet.telespazio.com/EN/Pages/default.aspx" target="_blank">
@@ -166,7 +166,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://teamsites.telespazio.com/sites/francequality/" target="_blank">
@@ -180,7 +180,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://secure.digiposte.fr/identification-plus" target="_blank">
@@ -194,7 +194,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://startpage.telespazio.fr/COM/covidpage.html" target="_blank">
@@ -208,7 +208,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://performancemanager5.successfactors.eu/login?company=finmeccaniP" target="_blank">
@@ -230,7 +230,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 			<div class="container">
 				<div class="row justify-content-center">
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://jira.ssl.telespazio.com/secure/Dashboard.jspa" target="_blank">
@@ -244,7 +244,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://tuleap.telespazio.fr" target="_blank">
@@ -258,7 +258,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="http://demonstrator.telespazio.com/" target="_blank">
@@ -272,7 +272,7 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						<div class="spacer-20"></div>
 					</div>
 	<!--link separator-->
-					<div class="col-lg-2 col-md-3 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="cardBlockShadow border rounded bg-white">
 							<div class="text-center">
 								<a class="navBlock justify-content-center" title="" href="https://login.salesforce.com/" target="_blank">
