--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta  content="text/css; charset=UTF-8"  http-equiv="content-type">
 		<title>StartPage</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+		<link rel="icon" href="./src/favicon.ico" type="image/x-icon"/>
 		<!-- JS, Popper.js, and jQuery -->
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -285,12 +285,12 @@ To add one, copy this template and add it next to the comment quoted "NewTabPlac
 						</div>
 						<div class="spacer-20"></div>
 					</div>
+			<!--NewTabPlacement-->
+					
+			<!--NewTabPlacement-->
 				</div>
 			</div>
 		</div>
-	<!--NewTabPlacement-->
-	
-	<!--NewTabPlacement-->
 <!--faq tab-->
 		<div class="tab-pane fade" id="nav-faq" role="tabpanel" aria-labelledby="nav-faq-tab">
 			<div class="spacer-20"></div>
